feat: removing paymentRail and replacing it with sameDayAch bool
