# src/swagger/schemas/transfer.yaml
@@ -66,15 +66,15 @@ CryptoToFiatTransfer:
     destinationCurrency:
       type: string
       enum: ["usd", "eur", "brl"]
-    paymentRail:
-      type: string
-      enum: ["ach", "sameDayAch", "wire", "sepa", "pix"]
+    sameDayAch:
+      type: boolean
+      description: Routes offramp for same day ACH transfer for a $1 additional fee
     description:
       type: string
-      description: Required if paymentRail is "wire"
+      description: Required if paymentRail for the account for the destinationAccountId is "wire"
     purposeOfPayment:
       type: string
-      description: Required if paymentRail is "wire"
+      description: Required if paymentRail for the account for the destinationAccountId is "wire"
     feeType:
       type: string
       enum: ["PERCENT", "FIX"]
